$size[20]{$u{CHANGE LOG:}}

$size[14]{$u{Update for 18.01.14 (Latikai):}}
  * The camera will start off further from your character upon log in.
  * The button to mute the violin player now tries to guilt trip you into not doing it.
  * Chat messages are now logged by default. They will end up in "C:\Users\<account>\Salem\logs\<character>\<channel>\".
  * Customizeable hotkeys! Check the new tab in the options for more details.

$size[14]{$u{Update for 30.12.13 (Latikai):}}
  * Lower bound on tree size, meaning trees in pots will now be visible again using the raider mode.
  * Console commands are now much more visible when typing them, especially on white backgrounds.
  * Introduced a new button in the main menu, allowing you to walk to your homestead (assuming you have one). Contributions for the icon on it are appreciated. Note that this will only get you a direction from Boston, and not an accurate location in conjunction with the locator.

$size[14]{$u{Update for 25.12.13 (Latikai):}}
  * Finally fixed the issues with raider mode trees. The effects have changed: trees will simply be scaled down to character height/width for better visibility. No more ugly resource hacks resulting in caching errors.

$size[14]{$u{Update for 22.12.13 (Latikai):}}
  * Waste claims will now be displayed in very bright red, so it's pretty obvious when one is around.
  * Introduced a small button in the character list, which will allow you to reverse the sorting (Z->A when alphabetical, or last-log-in first).

$size[14]{$u{Update for 20.12.13 (Latikai):}}
  * Waste claim display functionality now fixed (for some people, it was always visible while for other people the behaviour was reversed).

$size[14]{$u{Update for 30.11.13 (Latikai):}}
  * The violin player can now be muted for those too poor to buy him off. Please take his family into consideration, he deserves your support!

$size[14]{$u{Update for 17.11.13 (Latikai, thanks to Trojanz):}}