@@ -1,5 +1,9 @@
 $size[20]{$u{CHANGE LOG:}}
 
+$size[14]{$u{Update for <undecided> (Latikai):}}
+  * <WIP> cartographer
+  * Scalable chat font sizes: three options available. It shouldn't break.
+
 $size[14]{$u{Update for 18.01.14 (Latikai):}}
   * The camera will start off further from your character upon log in.
   * The button to mute the violin player now tries to guilt trip you into not doing it.
